changes , concludecare and validation++

--- a/HelloDoc/Views/AdminDash/AdminTableConclude.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableConclude.cshtml
@@ -173,11 +173,27 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-ban" viewBox="0 0 16 16">
-                                    <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
-                                </svg>Encounter
-                            </a>
+                            @if (item.Isfinalise)
+                            {
+
+                                <button class="dropdown-item" onclick="openmodel(this)" data-requestid="@item.requestid">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-ban" viewBox="0 0 16 16">
+                                        <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
+                                    </svg>Encounter
+                                </button>
+
+                            }
+                            else
+                            {
+                                <a asp-action="EncounterForm" asp-controller="ProviderDashBoard" asp-route-id="@item.requestid">
+                                    <button class="dropdown-item" href="#">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-ban me-3" viewBox="0 0 16 16">
+                                            <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
+                                        </svg>Encounter
+                                    </button>
+                                </a>
+                            }
+
                         </li>
                     </ul>
                     </td>
@@ -396,3 +412,16 @@
     </nav>
 </div>
 @* ---------------table---------------------------- *@
+
+<script>
+    function openmodel(btn) {
+        console.log("Button clicked");
+
+        const myModal = document.getElementById("isFinalize");
+        var bsModal = new bootstrap.Modal(myModal);
+        bsModal.show();
+
+        const requestid = btn.getAttribute('data-requestid');
+        document.getElementById('requid').value = requestid;
+    }
+</script>
