--- a/HelloDoc/Views/AdminDash/ProviderLocation.cshtml
+++ b/HelloDoc/Views/AdminDash/ProviderLocation.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
 
-<div id="map" style="height: 90vh; z-index: 1;"></div>
+<div id="map" class="m-auto  border-5 mt-5 " style="height:67vh;width:95vw; z-index: 1;"></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
