--- a/HelloDoc/Views/AdminDash/ViewCase.cshtml
+++ b/HelloDoc/Views/AdminDash/ViewCase.cshtml
@@ -16,7 +16,7 @@
 
 
 <div class="bg-body-secondary">
-    <div class="mx-auto pt-4  pb-3" style="width:70%;">
+    <div class="mx-auto pt-4  pb-3 mb-5" style="width:70%;">
         <div class="d-flex justify-content-between my-2">
             <h3>New Request</h3><br />
             @if (!ViewBag.IsPhysican)
