--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableActive.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableActive.cshtml
@@ -174,7 +174,7 @@
                         </li>
                     
                         <li>
-                            @if (item.Isfinalise)
+                            @if (item.Isfinalise && item.status != 4)
                             {
 
                                 <button class="dropdown-item" onclick="openmodel(this)" data-requestid="@item.requestid">
@@ -188,7 +188,7 @@
                             {
                                 @if(item.status == 5)
                                 {
-                                    <a asp-action="EncounterForm" asp-route-id="@item.requestid">
+                                    <a asp-action="EncounterForm" asp-controller="ProviderDashBoard" asp-route-id="@item.requestid">
                                         <button class="dropdown-item" href="#">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-ban me-3" viewBox="0 0 16 16">
                                                 <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
